# mdelibs

./: CMakeLists.txt  format.sh
audio/: CMakeLists.txt  drv_alsa.c  drv_ao.c  drv_ma.c
audio/pthread/: body.c  decl.c
core/: aboutdialog.c  thread.c  users.c
include/MDE/: Directory.h  Foundation.h  MachDep.h  Users.h
include/MDE/Audio/: Audio.h
include/MDE/Core/: AboutDialog.h  Users.h
include/MDE/Sound/: Sound.h
sound/: CMakeLists.txt  drv_flac.c  drv_mp3.c  drv_vorbis.c  id3.c  sound.c
src/: directory.c  file.c  string.c  users.c
src/audio/: drv_alsa.c
